2016-09-15  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/catalogues.py: Reimplemented Sparse class.

	The Sparse class is now a simple wrapper around SciPy's csc_matrix.

	The usage of both classes is exactly the same, the only differences are
	additional reading and writing functions for XML files as well as
	ARTS-consistent attributenames.

	Changes are **not** backwards compatible! Code relying on the old
	implementation of Sparse will fail and has to be adapted.

2016-09-13  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: Set DEVBUILD back to True after release.

2016-09-13  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: 0.3.2 Release.

2016-09-13  Oliver Lemke  <olemke@core-dump.info>

	* typhon/plots/stylelib/typhon.mplstyle:

	Revert (presumably accidental) change of default font size and
	linewidth to huge values.

2016-09-12  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/constants.py: Fixed attribute names for consistency.

2016-09-12  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/constants.py:

	Molar masses for dry air and water vapor are now listed in SI units.

	Old definitions from Wallace and Hobbs are deprecated and will be removed
	in a future version!

	Gas constants for dry air and water vapor are calculated on the fly
	using the previously defined gas constant and molar masses.

	Added Earth characteristics.

	Fixed inline documentation.

2016-09-12  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/constants.py:

	Added some constants and restructured the whole module.

	* typhon/physics/__init__.py:

	Add docs for types of input arguments and return values.

	* typhon/plots/__init__.py (figsize):

	Use golden ratio from typhon.constants.

2016-09-08  Oliver Lemke  <olemke@core-dump.info>

	* typhon/atmosphere.py, typhon/thermodynamics.py:

	Add docs for types of input arguments and return values.

2016-09-06  Oliver Lemke  <olemke@core-dump.info>
