@@ -1,5 +1,11 @@
 2016-09-15  Lukas Kluft  <lukas.kluft@gmail.com>
 
+	* typhon/physics/__init__.py:
+
+	Ported Fresnel and Snell functions from atmlab.
+
+2016-09-15  Lukas Kluft  <lukas.kluft@gmail.com>
+
 	* typhon/arts/catalogues.py: Reimplemented Sparse class.
 
 	The Sparse class is now a simple wrapper around SciPy's csc_matrix.
